export class TokenEntity
{
    constructor(token, userId)
    {
        this.token = token;
        this.userId = userId;
    }
}